<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/colorWhite"
    tools:context="cn.com.truly.ic.trulyemp.ResetPasswordActivity">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_new_password"
        android:textStyle="italic"
        android:textSize="@dimen/activity_title_size"/>

    <!--<View-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:background="@color/bootstrap_gray_lighter"/>-->

    <EditText
        android:id="@+id/new_pasword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pls_new_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/new_pasword_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pls_new_password_again"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/confirm_change"
        style="@style/dangerButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_change"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complex_password_tip"/>

</LinearLayout>
