<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context="cn.com.truly.ic.trulyemp.DormActivity"
        >

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_living_status"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/colorBootPrimary"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="4dp"
            app:contentPadding="12dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/living_status"
                        />

                    <TextView
                        android:id="@+id/dorm_living_status_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:textColor="@color/colorBootPrimary"
                        android:layout_marginLeft="8dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/living_in_date"
                        />

                    <TextView
                        android:id="@+id/dorm_living_date_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="60"
                        android:textColor="@color/colorBootPrimary"
                        android:layout_marginLeft="8dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dorm_area"
                        />

                    <TextView
                        android:id="@+id/dorm_area_number_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:textColor="@color/colorBootPrimary"
                        android:layout_marginLeft="8dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dorm_number"
                        />

                    <TextView
                        android:id="@+id/dorm_dorm_number_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="60"
                        android:textColor="@color/colorBootPrimary"
                        android:layout_marginLeft="8dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_dorm_fee_check"
        android:textSize="20sp"
        android:textColor="@color/colorBootDanger"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        />

        <android.support.design.widget.TabLayout
            android:id="@+id/dorm_fee_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/dorm_fee_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />


    </LinearLayout>

